27 August 2007
+ Changing file rights after upload to 644

26 August 2007
+ Fixed update script. Was missing filecabinet_pins table creation.

23 August 2007
+ Option add to auto link child resized images to parent.
+ Fixed bug where child images were not getting loaded on image
  selection.
+ File cabinet was pulling a file from the mod directory instead of
  locally. I think I misread the function.
+ Resize the image edit window to account for thumbnail.
+ Image selection would get corrupted by linked images. Fixed.
+ Updated: templates/settings.tpl

Version 1.2.0 -- 26 July 2007
-------------------------------------------------------------
6 August 2007
+ changed folder icon link back to '#'. Would not work on some systems
  (IE) 
+ clear image now checks max height and width display

1 August 2007
+ new installs of filecabinet were failing because Boost hadn't
  created the files directory yet 

26 July 2007
+ Added default classify directory
+ Increased popup size for file forms
+ Removed K (kilobyte) from error file.
+ Added missing video png to update
+ Oversized files were passing through without warning. Added error
  notifications.
+ Added human readable byte counts (kilo and mega)
+ Fixed multimedia table sql file
+ Added classify directory creation to update
+ Path for multimedia directory in update was wrong
+ Added boost directories for branch sites.

24 July 2007
+ Fixed image url text field in edit form. Added default http://
+ Made description textarea smaller.
+ Updated files: templates/image_edit.tpl

20 July 2007
+ Pinned image folders only show original thumbnails
+ Added minimum pop up window size
+ Added alt tag to no image
+ Fixed clear image link
+ Updated mp3player
+ Added missing branch directory to copy process in 1.1.0 update
+ Updated file: javascript/clear_image/head.js, conf/config.php

19 July 2007
+ Added missing "return true" to the install.php
+ Added upper limit on image dimension should a module have a high